#125: Fix binding cmake target name

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -14,7 +14,7 @@ nanobind_build_library(nanobind SHARED)
 # target, called vttv as well; we want the python package to be called vttv too,
 # thus the set_target_properties on OUTPUT_NAME.
 nanobind_add_module(pyvttv ${PYTHON_BINDING_SRCS} tv.cc)
-set_target_properties(${PYTHON_MODULE_TARGET} PROPERTIES OUTPUT_NAME "vttv")
+set_target_properties(pyvttv PROPERTIES OUTPUT_NAME "vttv")
 
 # .. Link it to necessary libraries
 target_link_libraries(pyvttv PUBLIC ${VT_TV_LIBRARY_NS} ${JSON_LIBRARY} ${FMT_LIBRARY})
